--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,6 @@
 
 /* CONTENT */
 
-
 .content-title {
   font-size: 34px;
   line-height: 60px;
@@ -47,7 +46,7 @@
 
 /* CARD */
 .card {
-  outline: 1px solid #D5D5D5;
+  outline: 1px solid #d5d5d5;
 }
 
 .card-title {
@@ -68,4 +67,44 @@
   color: white;
   border: none;
   font-size: 13px;
+}
+
+/* modal */
+.modal-title {
+  font-size: 37px;
+  letter-spacing: 2.5px;
+  line-height: auto;
+  font-weight: medium;
+}
+
+.modal-input {
+  border: 0.1px solid #a29797;
+  letter-spacing: 2px;
+  color: #898989;
+  padding: 0.5rem 1rem;
+}
+
+.modal-change-password {
+  color: #736262;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  font-size: 14px;
+}
+
+/* footer */
+.footer {
+  background: url("../assets/footer.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.footer::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #3959C8;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
 }
